tcos-configurator (1.1) unstable; urgency=low

  * First public upload (not only for MaX 4.0)
  * Load GDM settings when starts and populate checkboxes
  * Convert package to python-support, remove Makefile, add setup.py
  * Detect BackHarddi and don't show if not installed
  * Add another tab to launch TcosConfig

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Fri, 04 Jul 2008 11:43:34 +0200

tcos-configurator (1.0.max5) max; urgency=low

  * Use only 1 dns server in dhcpd.conf
  * Show dynamic IP if not static found
  * Use ifdown/ifup to reconfigure network (add 2 sec of pause between them)
  * Use 'route' instead of 'ip route' to get gateway
  * Add gdm var: [security]AllowRemoteAutoLogin=true

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Mon, 23 Jun 2008 18:03:35 +0200

tcos-configurator (1.0.max4) max; urgency=low

  * Fix detection and configuration of static IP
  * Less header border size 20 => 0

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 13 Apr 2008 23:43:07 +0200

tcos-configurator (1.0.max3) max; urgency=low

  * GDMCONF, search for gdm-cdd.conf and use if found

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sun, 13 Apr 2008 13:58:44 +0200

tcos-configurator (1.0.max2) max; urgency=low

  * Change gksu => gksudo
  * Install locales
  * Show install debug

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sat, 05 Apr 2008 23:03:57 +0200

tcos-configurator (1.0.max1) max; urgency=low

  * First version

 -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Sat, 05 Apr 2008 17:55:30 +0200