@@ -5,8 +5,9 @@ tcos-configurator (1.1) unstable; urgency=low
   * Convert package to python-support, remove Makefile, add setup.py
   * Detect BackHarddi and don't show if not installed
   * Add another tab to launch TcosConfig
+  * Add new Makefile to compile with tcos build system patches
 
- -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Fri, 04 Jul 2008 11:43:34 +0200
+ -- Mario Izquierdo (mariodebian) <mariodebian@gmail.com>  Fri, 04 Jul 2008 11:59:51 +0200
 
 tcos-configurator (1.0.max5) max; urgency=low
 
